erDiagram
  SOURCE ||--o{ SOURCE_ARTIFACT : publishes
  SOURCE_ARTIFACT ||--o{ SOURCE_SNAPSHOT : parsed_as
  SOURCE_SNAPSHOT ||--o{ SOURCE_RECORD : contains
  INGESTION_RUN ||--o{ SOURCE_SNAPSHOT : produces
  SOURCE_RECORD ||--o{ NORMALIZATION_WARNING : raises
  MEDICINAL_PRODUCT ||--o{ MARKETING_AUTHORIZATION : authorized_as
  ORGANIZATION ||--o{ MARKETING_AUTHORIZATION : holds
  MARKETING_AUTHORIZATION ||--|| PACKAGE : identifies
  PHARMACEUTICAL_FORM ||--o{ PACKAGE : describes
  ADMINISTRATION_ROUTE ||--o{ PACKAGE : optional_route
  PACKAGE ||--o{ PACKAGE_INGREDIENT : contains
  ACTIVE_SUBSTANCE ||--o{ PACKAGE_INGREDIENT : substance
  PACKAGE_INGREDIENT ||--o| STRENGTH : has
  PACKAGE }o--o{ ATC_CLASSIFICATION : classified_as
  OFFICIAL_EQUIVALENCE_GROUP ||--o{ OFFICIAL_EQUIVALENCE_MEMBERSHIP : has
  PACKAGE ||--o{ OFFICIAL_EQUIVALENCE_MEMBERSHIP : member
  OFFICIAL_EQUIVALENCE_GROUP ||--o{ PRICE_OBSERVATION : reference_price
  PACKAGE ||--o{ PRICE_OBSERVATION : package_price
  PACKAGE ||--o{ SHORTAGE_EPISODE : shortage
  SOURCE_RECORD ||--o{ OFFICIAL_EQUIVALENCE_MEMBERSHIP : proves
  SOURCE_RECORD ||--o{ PRICE_OBSERVATION : proves
  SOURCE_RECORD ||--o{ SHORTAGE_EPISODE : proves
